# orion

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  SPEC.md  pyproject.toml  railway.json
app/: config.py  database.py  deps.py  main.py
app/models/: __init__.py  broker_submission.py  entity_plan.py  reference.py  user.py
app/routers/: admin.py  auth.py  dashboard.py  ingest.py
app/schemas/: auth.py  common.py  dashboard.py  plans.py  submissions.py
app/services/: aggregation.py  demo_data.py  notify.py  security.py  validation.py
docs/: design-handover.md  integration-clearinghouse.md
docs/design-handoff/: DESIGN-README.md  orion-dashboard-prototype.html
frontend/: index.html  vercel.json
frontend/css/: app.css
frontend/js/: api.js  app.js  auth.js  authui.js  charts.js  fixtures.js  format.js  icons.js
frontend/tokens/: base.css  colors.css  fonts.css  spacing.css  theme-dark.css  typography.css
scripts/: seed.py
tests/: conftest.py  test_aggregation.py  test_auth.py  test_dashboard.py  test_ingest.py
